tests/errors/pattern-ref-binding-mode.ari
enum OptionI64 {
  Some(i64),
  None,
}

fn main() -> i64 {
  let value = Some(7);
  match value {
    Some(ref inner) => {
      return inner;
    }
    None => {
      return 0;
    }
  }
}
